Fixed font size on mobile

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   text-align: center;
   background-color: white;
   font-family: 'Lato', sans-serif;
+  font-size: 2vh;
 }
 #links{
   word-spacing: 20px;
